--- a/style/style.css
+++ b/style/style.css
@@ -57,6 +57,10 @@ div.text-align > h1, div.text-color > h1 {
     width: 100%;
 }
 
+div.option-interface {
+    border: 2px solid rgba(25,25,25,0.3);
+}
+
 .color {
     width: 50px;
     height: 50px;
@@ -76,5 +80,9 @@ div.text-align > h1, div.text-color > h1 {
 
 .green {
     background-color: green;
+}
+
+.black {
+    background-color: black;
 }
 
