--- a/style/style.css
+++ b/style/style.css
@@ -41,7 +41,7 @@ div.text-align > h1, div.text-align > p {
 
 div.buttons > p {
     font-size: 50px;
-    margin: 0;
+    margin: 5px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -84,5 +84,9 @@ div.option-interface {
 
 .black {
     background-color: black;
+}
+
+.white {
+    background-color: white;
 }
 
